--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
     <!-- @@APP-STYLES@@ -->
 </head>
 
-<body data-ng-controller="hrtech.mainController as mainCtrl" class="main-container">
+<body data-ng-controller="hrtech.mainController as mainCtrl">
 
-    <div class="header">
-        <img src="resources/menu-logo-2.svg">
-    </div>
+    <div class="main-container">
+        <div class="header">
+            <img src="resources/menu-logo-2.svg">
+        </div>
 
-    <div ui-view></div>
-    <div data-ng-if="!mainCtrl.isAppLoaded" class="main-body">
-    </div>
+        <div ui-view></div>
+        <div data-ng-if="!mainCtrl.isAppLoaded" class="main-body"></div>
 
-    <div class="footer">
-        <img src="resources/hr-tech-world-logo.svg">
-    </div>
+        <div class="footer">
+            <img src="resources/hr-tech-world-logo.svg">
+        </div>
 
-    <div data-ng-if="mainCtrl.isLoading" class="loading-overlay">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw spinner"></i>
+        <div data-ng-if="mainCtrl.isLoading" class="loading-overlay">
+            <i class="fa fa-spinner fa-pulse fa-3x fa-fw spinner"></i>
+        </div>
     </div>
 
     <!-- @@VENDOR-SCRIPTS@@ -->
