Adding elements to the first page. Adjusting css.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
         <div data-ng-if="!mainCtrl.isAppLoaded" class="main-body"></div>
 
         <div class="footer">
-            <img src="resources/hr-tech-world-logo.svg">
+            <div class="img">
+                <img src="resources/hr-tech-world-logo.svg">
+            </div>
+            <div class="extra">
+                <span>HRN</span>
+                <span>About</span>
+                <span>Team</span>
+                <span>Jobs</span>
+                <span>Contact</span>
+            </div>
+            <div class="social">
+                <i class="fa fa-twitter" title="Twitter"></i>
+                <i class="fa fa-linkedin" title="LinkedIn"></i>
+                <i class="fa fa-facebook" title="Facebook"></i>
+                <i class="fa fa-instagram" title="Instagram"></i>
+                <i class="fa fa-slideshare" title="Slideshare"></i>
+                <i class="fa fa-youtube-play" title="Youtube"></i>
+            </div>
+            <div class="contact">
+                <span>HRN | Terms & Conditions | Cookie Policy | Copyright <i class="fa fa-copyright"></i> 2015 HRN Europe. All Rights Reserved.</span>
+            </div>
         </div>
 
         <div data-ng-if="mainCtrl.isLoading" class="loading-overlay">
