Creating the package box.

--- a/app/tickets-page/tickets.html
+++ b/app/tickets-page/tickets.html
@@ -2,5 +2,5 @@
 
     <header-info></header-info>
 
-    <packages-card data-package="ticketsCtrl.packages[1]"></packages-card>
+    <packages-card data-packages="ticketsCtrl.packages"></packages-card>
 </div>
