Adding navigation and data selection between ticket type and package prices. Adding selection and group type in constants.

--- a/app/tickets-page/tickets.html
+++ b/app/tickets-page/tickets.html
@@ -1,6 +1,6 @@
 <div class="tickets-body">
 
-    <header-info></header-info>
+    <header-info data-selected="ticketsCtrl.selected"></header-info>
 
-    <packages-card data-packages="ticketsCtrl.packages"></packages-card>
+    <packages-card data-packages="ticketsCtrl.packages" data-group-type="ticketsCtrl.selected"></packages-card>
 </div>
