Adding a new svg file. Adding extra content in the tickets area.

--- a/app/tickets-page/tickets.html
+++ b/app/tickets-page/tickets.html
@@ -3,4 +3,19 @@
     <header-info data-selected="ticketsCtrl.selected"></header-info>
 
     <packages-card data-packages="ticketsCtrl.packages" data-group-type="ticketsCtrl.selected"></packages-card>
+
+    <div class="extra-content">
+        <div class="close-section">Close</div>
+
+        <div class="partner">
+            <div class="text">Our Trusted Partners</div>
+            <div class="images">
+                <img src="resources/workday.svg">
+                <img src="resources/workday.svg">
+                <img src="resources/workday.svg">
+                <img src="resources/workday.svg">
+                <img src="resources/workday.svg">
+            </div>
+        </div>
+    </div>
 </div>
